--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5.4"
+indicatif = "0.17.8"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
+strsim = "0.11.1"
+termion = "4.0.0"
