--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5.4"
+console = "0.15.8"
+dialoguer = "0.11.0"
 indicatif = "0.17.8"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
