--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 clap = "4.5.4"
 console = "0.15.8"
 dialoguer = "0.11.0"
+dirs = "5.0.1"
 indicatif = "0.17.8"
+rustyline = "14.0.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 strsim = "0.11.1"
