--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ dialoguer = "0.11.0"
 dirs = "5.0.1"
 indicatif = "0.17.8"
 serde = { version = "1.0.203", features = ["derive"] }
+inquire = { version = "0.7.5", features = ["date"] }
 serde_json = "1.0.117"
 strsim = "0.11.1"
