--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "nym"
-version = "0.1.0"
+version = "0.1.1"
+authors = ["Will Hord<will@willhord.dev>"]
+categories = ["command-line-utilities"]
+keywords = ["cli", "shell", "tool", "utility"]
+license = "GPL-3.0-only"
+homepage = "https://github.com/WillHord/nym"
+repository = "https://github.com/WillHord/nym"
+readme = "README.md"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
