--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ serde = { version = "1.0.203", features = ["derive"] }
 inquire = { version = "0.7.5", features = ["date"] }
 serde_json = "1.0.117"
 strsim = "0.11.1"
+regex = "1.10.5"
+fancy-regex = "0.13.0"
