--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ serde_json = "1.0.117"
 strsim = "0.11.1"
 regex = "1.10.5"
 fancy-regex = "0.13.0"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
