feat: Add new manager for groups and scripts
Refactor manager to larger module which allows for groups and scripts to
be edited. Scripts cannot be created in the editor yet but groups can.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ strsim = "0.11.1"
 regex = "1.10.5"
 fancy-regex = "0.13.0"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+indexmap = "2.3.0"
+crossterm = "0.28.1"
