--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,11 @@ fancy-regex = "0.13.0"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 indexmap = "2.3.0"
 crossterm = "0.28.1"
+
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
