--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ fancy-regex = "0.13.0"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 indexmap = "2.3.0"
 crossterm = "0.28.1"
+fuzzy-matcher = "0.3.7"
 
 
 [profile.release]
