fix: add rust-toolchain.toml for github workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Build and Release
 
 on:
   push:
+    branch:
+      - test-gh-action
     tags:
       - "v*"
 
@@ -24,8 +26,10 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           profile: minimal
           target: ${{ matrix.target }}
+          override: true
 
       - uses: actions-rs/cargo@v1
         with:
