--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,16 +6,17 @@ on:
       - test-gh-action
     # tags:
     #   - "v*"
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [macos-latest]
         include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-musl
+          # - os: ubuntu-latest
+          #   target: x86_64-unknown-linux-musl
           - os: macos-latest
             target: x86_64-apple-darwin
           - os: macos-latest
