--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,11 @@ jobs:
           target: ${{ matrix.target }}
           override: true
 
+      # Install cross-compilation toolchain for aarch64-linux-gnu
+      - name: Install aarch64-linux-gnu toolchain
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+
       # Needed for musl type linux distros
       - name: Install musl-tools
         if: matrix.target == 'x86_64-unknown-linux-musl'
