--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,11 @@ jobs:
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
 
+      # Install target-specific development files for sqlite3
+      - name: Install aarch64-linux-gnu sqlite3
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: sudo apt-get install -y libsqlite3-dev:arm64
+
       # Needed for musl type linux distros
       - name: Install musl-tools
         if: matrix.target == 'x86_64-unknown-linux-musl'
