--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,12 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
 
       # Install target-specific development files for sqlite3
-      - name: Install aarch64-linux-gnu sqlite3
+      - name: Install aarch64 architecture and sqlite3 dev
         if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: sudo apt-get install -y libsqlite3-dev:arm64
+        run: |
+          sudo dpkg --add-architecture arm64
+          sudo apt-get update
+          sudo apt-get install -y libsqlite3-dev
 
       # Needed for musl type linux distros
       - name: Install musl-tools
