--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ jobs:
             os: ubuntu-latest
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
+          # - target: aarch64-unknown-linux-gnu
+          #   os: ubuntu-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
@@ -35,12 +35,6 @@ jobs:
           target: ${{ matrix.target }}
           override: true
 
-      # Install cross-compilation toolchain for aarch64-linux-gnu
-      - name: Install aarch64-linux-gnu toolchain
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
-
-      # Install target-specific development files for sqlite3
       - name: Install aarch64 architecture and sqlite3 dev
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
