--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,10 @@ name: Build and Release
 
 on:
   push:
-    branches:
-      - test-gh-action
-    # tags:
-    #   - "v*"
+    # branches:
+    #   - test-gh-action
+    tags:
+      - "v*"
   workflow_dispatch:
 
 jobs:
@@ -34,13 +34,6 @@ jobs:
           profile: minimal
           target: ${{ matrix.target }}
           override: true
-
-      - name: Install aarch64 architecture and sqlite3 dev
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo dpkg --add-architecture arm64
-          sudo apt-get update
-          sudo apt-get install -y libsqlite3-dev
 
       # Needed for musl type linux distros
       - name: Install musl-tools
