--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,19 +16,18 @@ jobs:
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-            archive_name: x86_64-linux-musl
             archive_format: tar.gz
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            archive_name: x86_64-linux-gnu
+            archive_format: tar.gz
           # - target: aarch64-unknown-linux-gnu
           #   os: ubuntu-latest
           - target: x86_64-apple-darwin
             os: macos-latest
-            archive_name: x86_64-apple-darwin
+            archive_format: tar.gz
           - target: aarch64-apple-darwin
             os: macos-latest
-            archive_name: aarch64-apple-darwin
+            archive_format: tar.gz
 
     steps:
       - name: Checkout Code
